<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Moneta</string>
    <string name="portfolio">Portfolio</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="import_portfolio">Import</string>
    <string name="export_portfolio">Scan this QR code using the Moneta app on the other device.</string>
    <string name="share_message">Wow, my portfolio is at %s! I sure do love cryptocurrencies, soon I\'ll be the richest person %s! #moneta #crypto</string>
    <string name="share_location">in %s</string>
    <string name="share_location_fallback">around</string>
    <string name="settings_general">General</string>
    <string name="settings_currency">Currency</string>
    <string name="settings_range">Range</string>
    <string name="settings_blur">Blur</string>
    <string name="settings_blur_summary">Hide the total worth of your portfolio</string>
    <string name="range_1h">1 hour</string>
    <string name="range_24h">24 hours</string>
    <string name="range_7d">7 days</string>
    <string name="details">Details</string>
    <string name="refresh">Refresh</string>
    <string name="info">Info</string>
    <string name="symbol">Symbol</string>
    <string name="ranking">Ranking</string>
    <string name="market_capitalization">Market capitalization</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="total_supply">Total supply</string>
    <string name="update_portfolio">Update portfolio</string>
    <string name="unknown_listing">Unknown cryptocurrency</string>
    <string name="network_error">Network error</string>
    <string name="portfolio_empty">Your portfolio is empty</string>
    <string name="camera_error">Unable to access camera</string>
    <string name="import_success">Portfolio successfully imported</string>
    <string name="import_error">Invalid QR code</string>
</resources>
